<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginTop="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/loginTextView"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="48dp"
        android:backgroundTint="#374f57"
        android:onClick="login"
        android:text="@string/login"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/guestButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="48dp"
        android:onClick="loginAsGuest"
        android:text="Belépés vendégként"
        android:textAllCaps="true"
        android:backgroundTint="#374f57"
        />


    <Button
        android:id="@+id/singupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/guestButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="48dp"
        android:onClick="signup"
        android:text="@string/signup"
        android:textAllCaps="true"
        android:textColor="#374f57"
        android:backgroundTint="#eee"
        />

</RelativeLayout>